# kaffeknekt

./: .gitignore  CMakeLists.txt  README.md  TempDisplay.pro  about_us.html  comquery.bash  contact.html  db_info.txt  event_task.flux  graphview.cpp  graphview.h  hjemmeside.txt  index.html  index1.html  influx_fetcher.cpp  influx_fetcher.ui  influxsocketesp_trinity.py  json.txt  justquery.flux  linux_kommandoer.txt  main.cpp  main.py  main.spec  mainwindow.cpp  mainwindow.h  mainwindow.ui  nullfill_task.flux  powersum.flux  pythonSkriptVT.py  queryTest.flux  rtc.py  serial_log.txt  simplequery.flux  socket_server.py  startupShell.sh  temp_and_watt.py  temp_and_watt_copy.py  temp_test.py  temperatur.py  temperatur_influx.py
Didrik/clock_Time/: CMakeLists.txt  clock_time.cpp  main.cpp
Firebeetle_test/: platformio.ini
Graf_4TemplateTest/: Graf_4TemplateTest.pro  graphwidget.cpp  main.cpp  mainwindow.ui  style.qss  templategraf.h  templategraf.ui
QtSocketTest/: QtSocketTest  QtSocketTest.cpp
Qt_to_ESP32_Interfaces/: startupShell.sh
SocketData/: main.cpp
TempDisplay/: mainwindow.ui
bluetooth_test/: esp32_bluetooth.py  platformio.ini
build-Graf_4TemplateTest-RPI_Qt_6_Kit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-SocketData-Desktop-Debug/: .ninja_deps  .ninja_log  SocketData  build.ninja  qtcsettings.cmake
build-clock_Time-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  clock_Time  cmake_install.cmake
clock_Time/: CMakeLists.txt  clock_time.cpp
combined_test/: platformio.ini  time.py
combined_test2/: platformio.ini
combined_test3/: TaskACPower_cpp_bk  platformio.ini
css/: tooplate-barista.css
current_sensor_ac_test/: platformio.ini
database/: data_handling.py  index.html  influxsocketesp_trinity.py  real_event_task.flux  temp_and_watt.py
diagrams/: Activity_Diagram.drawio  Class_diagram_GUI.drawio  Context Diagram.drawio  Context_Diagramv2.drawio  DFDGUI_InDB.drawio  DFDGUI_esp.drawio  Electrical diagram.drawio  Gui Component Diagram.drawio  Kaffeknekt Flow Chart.drawio  Kaffeknekt_Flow_Chart.drawio  Kaffeknekt_System_Arkitektur.drawio  Main Component Diagram.drawio  Main_Component_Diagram.drawio  Overall_Software_Interface.drawio  SW_Dataflow_Diagram.drawio  Sequence_Diagram.drawio  Untitled Diagram.drawio  Use Case Sit1.drawio  Use_Case_Sit1.drawio  block_diagram_low_level.drawio  contextdiagram.drawio  database_functional.drawio  functional_block_diagram.drawio  readme.md  sysml requirement diagarm.drawio
dta_log/: nullfill_task.flux
kaffeknekt/: DataHandling.py  EspInflux.py  InfluxSocketESP_realTrinity.py  TempDisplay.pro.user.b3d0d9d  dataquery.sh  influx_fetcher.cpp  influx_fetcher.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  query.flux
nettsiden/: about_us.html  contact.html  index.html
notater/: Notater.md  ac_wattmeter.md  bluetooth_test.md  combined_test.md  dc_wattmeter.md  mqtt_test.md  (+8 more)
testqtVM/: CMakeLists.txt
(+666 files in other folders)
